# ida_game_elf_loaders

./: .gitignore  .gitmodules  ReadMe.md
src/elf_common/: elf_reader.h
src/wiiu/: CMakeLists.txt  ReadMe.md  cafe_loader.cpp  cafe_loader.h  wiiu.cpp
